Bug 254394 mozilla nsHttpHandler PR_Assert WellOrdered patch by jw6057@bacon.qcc.mass.edu r=darin sr=darin